test/src/e2e_vm_tests/test_programs/should_pass/language/usize_type/src/main.sw
script;

fn main() -> usize {
    let x: usize = 5;
    let y = 6usize;
    let z = x + y;
    z
}
