test/src/e2e_vm_tests/test_programs/should_fail/multiple_structs_with_the_same_name/src/main.sw
script;

dep module0;
dep module1;

fn main() {
    let mut x = module0::Thing::new();
    let y = module1::Thing::new();
    x = y;
}
